<resources>
    <string name="app_name">MyMeng</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="function_upload_image"> upload_image</string>
    <string name="function_camera"> open camera</string>
    <string name="function_user"> start user activity</string>


    <string name="user_query"> query all </string>
    <string name="user_delete"> delete all </string>
    <string name="user_add"> add user </string>

    <string name="fibonacci_name">斐波那契螺旋曲线</string>
    <string name="chrome_name">Chrome Logo</string>
    <string name="eye_name">萌萌的大眼睛</string>
    <string name="open_gl">open gl render</string>
    <string name="change_view">切换Surface</string>
</resources>