<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/tv_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:text="@string/function_camera">

        </TextView>
        <TextView
            android:id="@+id/tv_image_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:text="@string/function_upload_image">

        </TextView>

        <TextView
            android:id="@+id/tv_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:text="@string/function_user">

        </TextView>
        <TextView
            android:id="@+id/tv_fibonacci"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:text="@string/fibonacci_name">

        </TextView>
        <TextView
            android:id="@+id/tv_chrome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:text="@string/chrome_name">

        </TextView>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>